# cdh_log

./: .clang-format  BoostLogProxy.cpp.inl  CMakeLists.txt  ConsoleBackend.cpp  ConsoleBackend.h  README.md  boost_log.h  cdhlog.cpp  cdhlog.h  cdhlog.hpp  cdhlog_setup.hpp
cmake/: cdhlog-config.cmake  config.cmake.in
test/: CMakeLists.txt  test.cpp
